--- a/src/index.pug
+++ b/src/index.pug
@@ -4,24 +4,6 @@ block append title
     -page = 'Главная'
 
 block content
-    .topSliderSection
-        .slider.slider_wide.text_color_white.text_pos_center
-            .slider__item
-                img(class="slider__img" src="img/picture-slider-1.jpg")
-                .slider__overlay
-                .slider__title экологически чистое дерево
-                .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
-            .slider__item
-                img(class="slider__img" src="img/picture-slider-1.jpg")
-                .slider__overlay
-                .slider__title экологически чистое дерево
-                .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
-            .slider__item
-                img(class="slider__img" src="img/picture-slider-1.jpg")
-                .slider__overlay
-                .slider__title экологически чистое дерево
-                .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
-
     .featuresSection
         .container
             ul.features.flex_row__around.text_pos_center.flex_wrap
@@ -29,7 +11,7 @@ block content
                 li.features__item Мы принимаем к оплате любые платежи
                 li.features__item Работаем ежедневно, без выходных.
 
-    .catalogSection
+    .catalogSection#catalogSection
         .container
             .title.title_h2
                 span.title__line
@@ -41,36 +23,83 @@ block content
                     span.catalog__text Брус обрезной
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
+                    img(class="catalog__img" src="img/picture-catalog-2.jpg")
+                    span.catalog__text брус строганный
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-3.jpg")
                     span.catalog__text брус профилированый
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
+                    img(class="catalog__img" src="img/picture-catalog-4.jpg")
                     span.catalog__text Доска обрезная
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
-                    span.catalog__text Брус обрезной
+                    img(class="catalog__img" src="img/picture-catalog-5.jpg")
+                    span.catalog__text Доска строганная
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
-                    span.catalog__text Брус обрезной
+                    img(class="catalog__img" src="img/picture-catalog-6.jpg")
+                    span.catalog__text Доска половая
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
-                    span.catalog__text Брус обрезной
+                    img(class="catalog__img" src="img/picture-catalog-7.jpg")
+                    span.catalog__text Вагонка
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
-                    span.catalog__text Брус обрезной
+                    img(class="catalog__img" src="img/picture-catalog-8.jpg")
+                    span.catalog__text Фанера фк
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
                 .catalog__item
-                    img(class="catalog__img" src="img/picture-catalog-1.jpg")
-                    span.catalog__text Брус обрезной
+                    img(class="catalog__img" src="img/picture-catalog-9.jpg")
+                    span.catalog__text Фанера фсф
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-10.jpg")
+                    span.catalog__text Фанера ламинированная
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-11.jpg")
+                    span.catalog__text osb плита
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-12.jpg")
+                    span.catalog__text имитация бруса
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-13.jpg")
+                    span.catalog__text БЛОК ХАУС
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-14.jpg")
+                    span.catalog__text брусок обрезной
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-15.jpg")
+                    span.catalog__text брусок строганный
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-16.jpg")
+                    span.catalog__text Паркетная доска
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-17.jpg")
+                    span.catalog__text Террасная доска
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-18.jpg")
+                    span.catalog__text Пиллеты
+                    a(class="catalog__btn btn btn_primary" href="") Подробнее
+                .catalog__item
+                    img(class="catalog__img" src="img/picture-catalog-19.jpg")
+                    span.catalog__text Брикеты
                     a(class="catalog__btn btn btn_primary" href="") Подробнее
 
 
-    .feedbackSection
+
+
+
+    .feedbackSection#feedbackSection
         .container
             .title.title_h2
                 span.title__line
@@ -100,7 +129,7 @@ block content
                     p.feedback__text И соседям нравится. Теперь вот и я рекомендую)
 
 
-    .contactSection
+    .contactSection#contactSection
         .container
             .contact__wrap
                 .title.title_h2
