--- a/src/pug-components/layout.pug
+++ b/src/pug-components/layout.pug
@@ -12,51 +12,135 @@ html(lang="ru-Ru")
         link(rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap")
         link(rel='stylesheet', href='css/common.css')
+        link(rel='stylesheet', href='css/product.css')
         script(src="https://api-maps.yandex.ru/2.1/?apikey=c599d252-3a6f-4b64-872c-a529f6263f40&lang=ru_RU" type="text/javascript")
     body
         block header
             mixin header
                 .container.flex_row__between.align_center.flex_wrap
-                    a(class="header__logo sz-logo" href="#")
+                    a(class="header__logo sz-logo" href="index.html")
                         img(class="sz-logo__img" src="img/logo-stroyzakaz.png" alt="Логотип STROY-ZAKAZ")
                         span.sz-logo__text STROY-ZAKAZ
                     ul.sz-contact.text_color_black.header__contact
-                      li.sz-contact__item.sz-contact__item_phone +7 (861) 217-75-85
-                      li.sz-contact__item.sz-contact__item_phone +7 (861) 217-75-85
-                      li.sz-contact__item.sz-contact__item_phone +7 (861) 217-75-85
+                      li.sz-contact__item.sz-contact__item_phone <b>Москва:</b> +7 (861) 217-75-85
+                      li.sz-contact__item.sz-contact__item_phone <b>Москва:</b> +7 (861) 217-75-85
+                      li.sz-contact__item.sz-contact__item_phone <b>Москва:</b> +7 (861) 217-75-85
                       li.sz-contact__item.sz-contact__item_email info@stroy-zakaz.ru
-                    button(class="header__call btn btn_transparent text_color_grey" type="button") Меня заменят
+                    //button(class="header__call btn btn_transparent text_color_grey" type="button") Меня заменят
             mixin subHeader
                 .container
-                    ul.nav.flex_row__around.align_center
-                        li.nav__item.dropdown.dropdown_down Категории
+                    ul.nav.dropdown.flex_row__around.align_center.flex_wrap
+                        li.nav__item
+                            <a class="link-spy arrow arrow_down desk" href="#catalogSection">Категории</a>
+                            <a class="arrow arrow_down mob">Категории</a>
                             ul
-                                li.dropdown.dropdown_right Брус обрезной
+                                li <a class="arrow arrow_right" href="">Брус обрезной</a>
                                     ul
-                                        li Брус обрезной ГОСТ
-                                        li Брус обрезной ТУ
-                                li Брус профилированный
-                                li.dropdown.dropdown_right Брус строганный
+                                        li <a href="">Брус обрезной ГОСТ</a>
+                                        li <a href="">Брус обрезной ТУ</a>
+                                li <a class="arrow arrow_right" href="">Брус профилированный</a>
                                     ul
-                                        li Брус обрезной ГОСТ
-                                        li Брус обрезной ТУ
-                                        li Брус обрезной ТУ
-                                        li Брус обрезной ТУ
-                                        li Брус обрезной ТУ
-                                li Брусок
+                                        li <a href="">Брус профилированный</a>
+                                        li <a href="">Брус сухой профилированный</a>
+                                li <a class="arrow arrow_right" href="">Брус строганный</a>
+                                    ul
+                                        li <a href="">Брус строганный</a>
+                                        li <a href="">Брус сухой строганный</a>
+                                li <a class="arrow arrow_right" href="">Брусок</a>
+                                    ul
+                                        li <a href="">Брусок обрезной</a>
+                                        li <a href="">Брусок строганный</a>
+                                li <a class="arrow arrow_right" href="">Доска обрезная</a>
+                                    ul
+                                        li <a href="">Брус и доска обрезная осина</a>
+                                        li <a href="">Доска обрезная</a>
+                                        li <a href="">Доска обрезная 2 сорт ГОСТ</a>
+                                        li <a href="">Доска обрезная 2 сорт ТУ</a>
+                                        li <a href="">Доска обрезная ГОСТ</a>
+                                li <a class="arrow arrow_right" href="">Доска половая</a>
+                                    ul
+                                        li <a href="">Доска половая</a>
+                                        li <a href="">Доска сухая половая</a>
+                                li <a class="arrow arrow_right" href="">Доска строганная</a>
+                                    ul
+                                        li <a href="">Доска строганная</a>
+                                        li <a href="">Доска сухая строганная</a>
+                                li <a class="arrow arrow_right" href="">Вагонка</a>
+                                    ul
+                                        li <a href="">Вагонка</a>
+                                        li <a href="">Вагонка сухая</a>
+                                        li <a href="">Евровагонка</a>
+                                li <a class="arrow arrow_right" href="">Фанера ФК</a>
+                                    ul
+                                        li <a href="">Сорт 3/4</a>
+                                        li <a href="">Сорт 4/4</a>
+                                        li <a href="">Фанера строительный</a>
+                                li <a class="arrow arrow_right" href="">Фанера ФСФ</a>
+                                    ul
+                                        li <a href="">1220*2440 3/3</a>
+                                        li <a href="">1220х2440 3/4</a>
+                                        li <a href="">1220*2440 4/4</a>
+                                        li <a href="">1500*3000 4/4</a>
+                                li <a class="arrow arrow_right" href="">Фанера ламинированная</a>
+                                    ul
+                                        li <a href="">1220х2440</a>
+                                        li <a href="">1500х3000</a>
+                                li <a class="arrow arrow_right" href="">OSB Плита</a>
+                                    ul
+                                        li <a href="">OSB-3</a>
+                                li <a class="" href="">Блок Хаус</a>
+                                li <a class="arrow arrow_right" href="">Имитация бруса</a>
+                                    ul
+                                        li <a href="">Имитация бруса класс А</a>
+                                        li <a href="">Имитация бруса класс АВ</a>
+                                        li <a href="">Имитация бруса класс В</a>
+                                        li <a href="">Имитация бруса класс С</a>
+                                li <a class="arrow arrow_right" href="">Утеплитель</a>
+                                    ul
+                                        li <a href="">Утеплитель ROCKWOOL</a>
+                                        li <a href="">Утеплитель URSA GEO</a>
+                                        li <a href="">Утеплитель IZOBEL</a>
+                                        li <a href="">Утеплитель IZOVOL</a>
+                                        li <a href="">Утеплитель ISOROC</a>
 
-                        li.nav__item Доставка и оплата
-                        li.nav__item Контакты
-                        li.nav__item Контакты
+                        li.nav__item
+                            a(href="") Доставка и оплата
+                        li.nav__item
+                            a(class="link-spy" href="#feedbackSection") Отзывы
+                        li.nav__item
+                            a(class="link-spy" href="#contactSection") Контакты
 
-            if page == 'Главная'
-                header.header
-                    +header
-                .subHeader
-                    +subHeader
-            else if page != 'Главная'
-                header.header.notindexpage
-                    +header
+            //if page == 'Главная'
+            //    header.header
+            //        +header
+            //    .subHeader
+            //        +subHeader
+            //else if page != 'Главная'
+            //    header.header.notindexpage
+            //        +header
+            header.header
+                +header
+            .subHeader
+                +subHeader
+
+            .topSliderSection
+                .slider.slider_wide.text_color_white.text_pos_center
+                    .slider__item
+                        img(class="slider__img" src="img/picture-slider-1.jpg")
+                        .slider__overlay
+                        .slider__title экологически чистое дерево
+                        .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
+                    .slider__item
+                        img(class="slider__img" src="img/picture-slider-1.jpg")
+                        .slider__overlay
+                        .slider__title экологически чистое дерево
+                        .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
+                    .slider__item
+                        img(class="slider__img" src="img/picture-slider-1.jpg")
+                        .slider__overlay
+                        .slider__title экологически чистое дерево
+                        .slider__subtitle Наше дерево экологичекски чистое и правильно выращенное, поэтому наши пиломатериалы лучше чем у конкурентов
+
 
 
 
