Added links to index page sections

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,7 @@ block content
                 li.features__item Работаем ежедневно, без выходных.
 
     .catalogSection#catalogSection
+        a(name="catalogSection")
         .container
             .title.title_h2
                 span.title__line
