--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -23,6 +23,11 @@ WHITE = #ffffff
   height: 100%
 }
 
+.sticky {
+  position: fixed !important
+  top: 0
+}
+
 .btn {
   min-height: 58px;
   text-transform: uppercase
@@ -278,91 +283,6 @@ ul.dropdown:after {
     }
   }
 }
-
-
-//.dropdown {
-//  .arrow {
-//    position: relative;
-//    padding-right: 20px
-//
-//    &:after {
-//      content: ''
-//      position: absolute;
-//      top: 50%
-//      transform: translateY(-50%)
-//      width: 10px
-//      height: 6px
-//      background: url("../img/icon-arrow.png")
-//    }
-//
-//    &_right {
-//      display: flex
-//      align-items: center
-//      width: 100%
-//      height: 100%
-//
-//      &:after {
-//        right: 30px
-//        margin-top: -4px
-//        transform: rotate(-90deg)
-//      }
-//    }
-//
-//    &_down {
-//      &:after {
-//        right: 0
-//      }
-//    }
-//  }
-//
-//  // Set the parent <li>’s CSS position property to ‘relative’.
-//
-//
-//  li {
-//    position: relative;
-//    display: flex
-//    align-items: center
-//    min-height: 43px
-//
-//    border-bottom: 1px solid #ffe2a4
-//    border-right: 1px solid #ffe2a4
-//    border-left: 1px solid #ffe2a4
-//    background: WHITE
-//
-//    a {
-//      position: absolute !important
-//      display: flex
-//      width: 100%
-//      height: 100%
-//      padding: 10px 15px 10px 23px
-//      top: 0
-//    }
-//
-//    &:hover {
-//      background: PRIMARY
-//      border-color: PRIMARY
-//    }
-//  }
-//
-//  // The CSS to hide the sub menus.
-//  & ul {
-//    display: none;
-//  }
-//
-//  // Displays the dropdown menu on hover.
-//  //&:hover > ul {
-//  & > ul {
-//    display: block;
-//    position: absolute;
-//    width: 325px
-//  }
-//
-//  // Displays second level dropdown menus to the right of the first level dropdown menu.
-//  &.dropdown_right ul {
-//    left: 100%;
-//    top: 0;
-//  }
-//}
 
 
 .slick-dots {
